--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
 <h2>Salary</h2>
 <p>The salary of a Computer Programmer is averged at around $97,800 Per Year, At the lowest payment it is around $54,310 Per Year, and at Most payment is $157,690 per year. </p>
 <div>
-<img src="img/salary1.jpeg" alt="salary1">
+<img src="img/Salary1.jpeg" alt="salary1">
 <img src="img/Salary2.webp" alt="salary2">
-<img src="img/salary3.jpeg" alt="salary3">
+<img src="img/Salary3.jpeg" alt="salary3">
 </div>
 <p>Computer Programmers at everage make:</p>
 <div class="container">
